# rsop

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release  test_splice  update-version
.github/workflows/: ci.yml  security-audit.yml
config/: config.toml.advanced  config.toml.default  config.toml.example  config.toml.tiny
demo/: populate  record
src/: cli.rs  config.rs  handler.rs  main.rs
