[package]
name = "rsop"
version = "1.4.2"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = { version = "1.0.93", default-features = false, features = ["backtrace", "std"] }
clap = { version = "4.5.20", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
const_format = { version = "0.2.33", default-features = false, features = ["const_generics"] }
crossbeam-utils = { version = "0.8.20", default-features = false, features = ["std"] }
log = { version = "0.4.22", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
serde = { version = "1.0.214", default-features = false, features = ["derive", "std"] }
shlex = { version = "1.3.0", default-features = false, features = ["std"] }
simple_logger = { version = "5.0.0", default-features = false, features = ["colors", "stderr"] }
strum = { version = "0.26.3", default-features = false, features = ["derive", "std"] }
tempfile = { version = "3.14.0", default-features = false }
termion = { version = "4.0.3", default-features = false }
thiserror = { version = "2.0.1", default-features = false }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
tree_magic_mini = { version = "3.1.6", default-features = false }
url = { version = "2.5.3", default-features = false }
xdg = { version = "2.5.2", default-features = false }
