[package]
name = "rsop"
version = "1.5.1"
edition = "2024"
rust-version = "1.85"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["backtrace", "std"] }
clap = { version = "4.5.53", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
const_format = { version = "0.2.35", default-features = false, features = ["const_generics"] }
crossbeam-utils = { version = "0.8.21", default-features = false, features = ["std"] }
log = { version = "0.4.29", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
regex = { version = "1.12.2", default-features = false, features = ["std"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
shlex = { version = "1.3.0", default-features = false, features = ["std"] }
simple_logger = { version = "5.1.0", default-features = false, features = ["colors", "stderr"] }
strum = { version = "0.26.3", default-features = false, features = ["derive", "std"] }
tempfile = { version = "3.23.0", default-features = false }
termion = { version = "4.0.6", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
toml = { version = "0.8.23", default-features = false, features = ["parse"] }
tree_magic_mini = { version = "3.2.2", default-features = false }
url = { version = "2.5.7", default-features = false }
xdg = { version = "2.5.2", default-features = false }

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
explicit_outlives_requirements = "warn"
missing_docs = "warn"
non_ascii_idents = "deny"
redundant-lifetimes = "warn"
single-use-lifetimes = "warn"
unit-bindings = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unnecessary_debug_formatting = "allow"
# below lints are from clippy::restriction
# https://rust-lang.github.io/rust-clippy/master/index.html#/?levels=allow&groups=restriction
allow_attributes = "warn"
as_pointer_underscore = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_enum_variants_with_brackets = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
# indexing_slicing = "warn"
infinite_loop = "warn"
implicit_clone = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
# missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
panic = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
pub_without_shorthand = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
# self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_slice = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
